...

    // MARK: - Outlets
    private lazy var picture: UIImageView = {
        let picture = UIImageView()
        picture.contentMode = .scaleAspectFill
        picture.backgroundColor = .clear
        picture.accessibilityLabel = "OnboardingPicture"
        return picture
    }()

    private lazy var descriptionTitle = UILabel.createSimpleLabel(text: "",
                                                                  size: OnboardingSizes.textSize.value,
                                                                  width: .bold,
...
