...

        switch status {
        case .wellDone:
            currentView.present(allertController, animated: true)
            allertController.present(
                type: .oneButton,
                title: "Успешно!",
                message: "Ссылка для сброса старого пароля и установки нового отправлена на указанный Вами email - адрес",
                imageName: "saveDone",
                colorOne: .systemCyan,
                colorTwo: nil,
                buttonText: "Ок",
                buttonTextTwo: nil) { _ in
                    self.dismissToLoginScreen(from: view)
                }
        case .failure:
            currentView.present(allertController, animated: true)
            allertController.present(
                type: .oneButton,
                title: "Ошибка",
                message: "Произошла неизвестная ошибка. Проверьте введенный Вами адрес электронной почты, не содержит ли он ошибок. Либо, попробуйте позже",
                imageName: "error",
                colorOne: .systemCyan,
                colorTwo: nil,
                buttonText: "Ок",
                buttonTextTwo: nil) { _ in }
...
