...
                                                        textSize: 20,
                                                        weight: .semibold,
                                                        color: .systemGray5,
                                                        returnKey: .done)
        textField.autocapitalizationType = .none
        textField.autocorrectionType = .no
        textField.accessibilityLabel = "ForggotenField"
        return textField
    }()

    private lazy var acceptButton: BaseButton = {
        let button = BaseButton(text: "Сбросить пароль", color: .systemCyan)
        button.setupShadows(with: .label)
        button.addTarget(self, action: #selector(getResetPassword), for: .touchDown)
        return button
    }()

    // MARK: - Lifecycle
...
